# ginga-recommender

./: Doxy  Instrucoes_documentacao.txt  install.sh  uninstall.sh  update.sh
AgentListener/: Makefile.in  autogen.sh  configure  configure.in
AgentListener/autom4te.cache/: output.0  output.1  output.2  traces.0  traces.1  traces.2
AgentListener/include/: AgentListener.h  Doxy  IAgentListener.h  IAgentListener.h~  Makefile.am  Makefile.am~  Makefile.in
AgentListener/src/: AgentListener.cpp  Makefile.am  Makefile.in
DataMining/: autogen.sh  configure  configure.in
DataMining/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
DataMining/include/: DataMining.h  Makefile.am  Makefile.in
DataMining/src/: DataMining.cpp  Makefile.am  Makefile.in
DataMining/test/: Makefile.am  Makefile.in  banco.db  decode_items  execute.sh  madrugada.lua  main.cpp  manha.lua  noite.lua  pouco_manha.out  pouco_manha.tmp  user.db
Database/: autogen.sh  configure  configure.in
Database/autom4te.cache/: output.0  output.1  output.2  traces.0  traces.1  traces.2
Database/include/: Database.h  Makefile.am  Makefile.in  sqlite3.h  sqlite3ext.h
Database/src/: Database.cpp  Makefile.am  Makefile.in
Database/test/: Makefile.am  Makefile.in  main.cpp
Documentacao_BOUML/: class128121.html  class128249.html  class128377.html  class128505.html  class128633.html  class128761.html  class128889.html  class129017.html  class129145.html  class129273.html  class129401.html  class129529.html  class129657.html  class129785.html  class129913.html  class130041.html  class130169.html  class130297.html  class130425.html  class130553.html  class130681.html  class130809.html  class130937.html  class131065.html  class131193.html  class131321.html  class131449.html  class131577.html  class131705.html  class131833.html  class131961.html  class132089.html  class132217.html  class132345.html  class132473.html  class132601.html  class132729.html  class132857.html  class132985.html  class133113.html  (+49 more)
Documentacao_DOXYGEN/: AgentListener_2config_8h-source.html  AgentListener_2config_8h.html  AgentListener_8cpp.html  AgentListener_8h-source.html  AgentListener_8h.html  Apriori_8cpp.html  Apriori_8hpp-source.html  Apriori_8hpp.html  Apriori__Trie_8cpp.html  Apriori__Trie_8hpp-source.html  Apriori__Trie_8hpp.html  Channel_8cpp.html  Channel_8h-source.html  Channel_8h.html  Context_8cpp.html  Context_8h-source.html  Context_8h.html  DataMining_2config_8h-source.html  DataMining_2config_8h.html  DataMining_2test_2main_8cpp.html  DataMining_8cpp.html  DataMining_8h-source.html  DataMining_8h.html  Database_2config_8h-source.html  Database_2config_8h.html  Database_2test_2main_8cpp.html  Database_8cpp.html  Database_8h-source.html  Database_8h.html  Document_8cpp.html  Document_8h-source.html  Document_8h.html  EIT_2config_8h-source.html  EIT_2config_8h.html  EIT_8cpp.html  EIT_8h-source.html  EIT_8h.html  ExportXML_2config_8h-source.html  ExportXML_2config_8h.html  IAgentListener_8h-source.html  (+603 more)
EIT/: autogen.sh  configure  configure.in
EIT/autom4te.cache/: output.0  output.1  output.2  traces.0  traces.1  traces.2
EIT/include/: EIT.h  Makefile.am  Makefile.in
EIT/src/: EIT.cpp  Makefile.am  Makefile.in
ExportXML/: autogen.sh  configure  configure.in
ExportXML/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
ExportXML/include/: Makefile.am  Makefile.in  createXML.h
ExportXML/src/: Makefile.am  Makefile.in  createXML.cpp
LocalAgent/: Makefile.am  Makefile.in  autogen.sh  configure  configure.in  configure.in~  script.sh  teste.out  teste2.out
LocalAgent/autom4te.cache/: output.0  output.1  output.2  traces.0  traces.1  traces.2
LocalAgent/files/: Makefile.am  Makefile.in  iteraction.db
LocalAgent/include/: Channel.h  Context.h  Document.h  Iteraction.h  IteractionBase.h  Key.h  LocalAgent.h  LocalAgent.h~  Makefile.am  Makefile.am~  Makefile.in  Media.h  Meta.h  NclStateMachine.h  Program.h  User.h  User.h~  Volume.h
LocalAgent/include/thread/: Makefile.am  Makefile.in  Thread.h
LocalAgent/src/: Channel.cpp  Context.cpp  Document.cpp  Iteraction.cpp  IteractionBase.cpp  Key.cpp  LocalAgent.cpp  LocalAgent.cpp~  Makefile.am  Makefile.am~  Makefile.in  Media.cpp  Meta.cpp  NclStateMachine.cpp  Program.cpp  User.cpp  User.cpp~  Volume.cpp
LocalAgent/src/thread/: Makefile.am  Makefile.in  Thread.cpp
MiningAlgorithm/: autogen.sh  configure  configure.in
MiningAlgorithm/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
MiningAlgorithm/include/: IMiningAlgorithmApriori.h  IMiningAlgorithmApriori.h~  Makefile.am  Makefile.am~  Makefile.in  MiningAlgorithm.h  SI.h  SI.h~  User.h
MiningAlgorithm/src/: IMiningAlgorithmApriori.cpp  Makefile.am  Makefile.am~  Makefile.in  MiningAlgorithm.cpp  SI.cpp  SI.cpp~  User.cpp
MiningAlgorithm/test/: Makefile  Makefile.am  Makefile.in  cache.db  compila  execute.sh  historico.txt  madrugada.lua  main.cpp  mining.db  outDB.db  run_me  tarde.lua  test
SDT/: autogen.sh  configure  configure.in
SDT/autom4te.cache/: output.0  output.1  output.2  traces.0  traces.1  traces.2
SDT/include/: Doxy  Makefile.am  Makefile.in  SDT.h
SDT/src/: Makefile.am  Makefile.in  SDT.cpp
Scheduler/: autogen.sh  configure  configure.in
Scheduler/autom4te.cache/: output.0  output.1  output.2  traces.0  traces.1  traces.2
Scheduler/include/: Makefile.am  Makefile.in  Scheduler.h  Scheduler.h~
Scheduler/src/: Makefile.am  Makefile.in  Scheduler.cpp~
SchedulerItem/: autogen.sh  configure  configure.in
SchedulerItem/autom4te.cache/: output.0  output.1  output.2  traces.0  traces.1  traces.2
SchedulerItem/include/: Makefile.am  Makefile.in  SchedulerItem.h
SchedulerItem/src/: Makefile.am  Makefile.in  SchedulerItem.cpp
SystemResource/: Makefile.in  autogen.sh  configure  configure.in
SystemResource/autom4te.cache/: output.0  (+5 more)
SystemResource/src/: Makefile.am  Makefile.in  SystemResource.cpp
Utils/: autogen.sh  configure  configure.in
Utils/src/: Makefile.am  Makefile.in  Utils.cpp
(+26 files in other folders)
