
# set the include path found by configure
INCLUDES = $(all_includes)

LIBS =

libgingarecommenderagentlistenerdir = /usr/local/lib/ginga

libgingarecommenderagentlistener_so_LDADD = 

libgingarecommenderagentlistener_so_LDFLAGS = -Wl,-soname,libgingarecommenderagentlistener.so \
    --shared -ldl -I/usr/local/include/ginga/

libgingarecommenderagentlistener_PROGRAMS = libgingarecommenderagentlistener.so
libgingarecommenderagentlistener_so_SOURCES = AgentListener.cpp
