
# set the include path found by configure
INCLUDES = $(all_includes)

LIBS =

libgingarecommenderscheduleritemdir = /usr/local/lib/ginga

libgingarecommenderscheduleritem_so_LDADD = 

libgingarecommenderscheduleritem_so_LDFLAGS = -Wl,-soname,libgingarecommenderscheduleritem.so \
    --shared -ldl -I/usr/local/include/ginga/

libgingarecommenderscheduleritem_PROGRAMS = libgingarecommenderscheduleritem.so
libgingarecommenderscheduleritem_so_SOURCES = SchedulerItem.cpp
